--- a/index.html
+++ b/index.html
@@ -3,47 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fitness Assessment Charts</title>
+  <title>Cricket Association - Player Assessment Dashboard</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
-<div class="container">
-  <div class="chart-box orange">
-    <div class="chart-title">YoYo Test</div>
-    <canvas id="chartYoYo"></canvas>
-    <div class="data-table">
-      <table>
-        <tr><th>Date</th><th>Phase</th><th>Value</th></tr>
-        <tr><td>21-Aug-2023</td><td>Pre-Season</td><td>16.7</td></tr>
-      </table>
-    </div>
-  </div>
+<header class="main-header">
+  <h1>Cricket Association - Player Assessment Dashboard</h1>
+</header>
 
-  <div class="chart-box">
-    <div class="chart-title">Standing Broad Jump</div>
-    <canvas id="chartSBJ"></canvas>
-    <div class="data-table">
-      <table>
-        <tr><th>Date</th><th>Jump</th><th>Target</th></tr>
-        <tr><td>7-Apr-2023</td><td>2.28</td><td>2.60</td></tr>
-      </table>
-    </div>
-  </div>
+<div id="playerInfo" class="player-card">
+  <h2>Individual Report - PLAYER 29</h2>
+  <table>
+    <tr><td><strong>Name</strong></td><td>PLAYER 29</td></tr>
+    <tr><td><strong>Gender</strong></td><td>Male</td></tr>
+    <tr><td><strong>Age</strong></td><td>28.19</td></tr>
+    <tr><td><strong>Handedness</strong></td><td>Right</td></tr>
+    <tr><td><strong>Role</strong></td><td>Batsman</td></tr>
+  </table>
+</div>
 
-  <div class="chart-box red">
-    <div class="chart-title">Run A 3 (sec)</div>
-    <canvas id="chartRunA3"></canvas>
-    <div class="data-table">
-      <table>
-        <tr><th>Date</th><th>Run A 3</th><th>Target</th></tr>
-        <tr><td>30-Jan-2021</td><td>9.41</td><td>9.0</td></tr>
-      </table>
-    </div>
-  </div>
+<div class="layout">
+  <!-- Right Sidebar with Filter -->
+  <aside class="sidebar">
+    <h2>Filter</h2>
+    <label for="testSelect">Select Test</label>
+    <select id="testSelect">
+      <option value="10m">10m Sprint</option>
+      <option value="20m">20m Sprint</option>
+      <option value="YoYo">YoYo Test</option>
+      <option value="SBJ">Standing Broad Jump</option>
+      <option value="Glute">SL Glute Bridges</option>
+      <option value="Copen">Copen Hagen</option>
+    </select>
 
-  <!-- Add more charts similarly -->
+    <h2>Data Table</h2>
+    <div class="data-table" id="playerData"></div>
+  </aside>
+
+  <!-- Main Chart Section -->
+  <main class="container">
+    <div class="chart-box dark-green">
+      <div class="chart-title-fixed">Fitness Test - Best Result</div>
+      <div class="chart-title" id="dynamicTitle">Performance Chart - 10m</div>
+      <canvas id="chartDynamic"></canvas>
+    </div>
+  </main>
+</div>
+
+<div class="injury-table">
+  <h3>Injury History</h3>
+  <table>
+    <thead>
+      <tr><th>Player</th><th>2023-24 Injuries</th><th>Previous History</th></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>PLAYER 29</td>
+        <td>#NA</td>
+        <td>#NA</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 
 <script src="script.js"></script>
