--- a/index.html
+++ b/index.html
@@ -2,35 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Player Report</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cricket Player Report</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <div class="report-container">
-    <header class="header">
-      <h1>Cricket Association</h1>
-      <div class="player-box" id="playerInfoBox"></div>
-    </header>
-
-    <section class="controls">
-      <div class="form-row">
-        <label>Select Player:
-          <select id="playerSelect"></select>
-        </label>
-        <label>Number of Recent Tests:
-          <input type="number" id="testCount" value="5" min="1" />
-        </label>
-        <label>Select Tests:
-          <input type="checkbox" value="10m Best" checked disabled> 10m Best
-        </label>
-        <button onclick="generateReport()">Generate Report</button>
-      </div>
-    </section>
-
-    <section id="reportContainer" class="report-grid"></section>
+  <div class="header">
+    <h1>Cricket Association</h1>
+    <p><strong>Player:</strong> <span id="playerName">PLAYER 26</span></p>
+    <p><strong>Age:</strong> <span id="playerAge">28.19</span></p>
+    <p><strong>Role:</strong> <span id="playerRole">Batsman</span></p>
   </div>
+
+  <div class="card">
+    <label for="playerSelect">Select Player:</label>
+    <select id="playerSelect"></select>
+
+    <label for="recentCount">Number of Recent Tests:</label>
+    <input type="number" id="recentCount" value="5" min="1" max="10" />
+
+    <label>Select Tests:</label>
+    <label><input type="checkbox" id="test10m" checked /> 10m Best</label>
+
+    <button onclick="generateReport()">Generate Report</button>
+  </div>
+
+  <div id="reportContainer" class="card"></div>
 
   <script src="script.js"></script>
 </body>
