--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
           <svg class="upload-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5-5m0 0l5 5m-5-5v12" />
           </svg>
-          Import
+          Import CSV
         </label>
       </div>
     </div>
 
     <form id="reportForm" class="form-container">
       <div class="form-fields">
-
         <!-- 1. Latest Date (End Date) -->
         <div class="date-wrapper">
-          <label for="dateInput">Latest Date (End Date):</label> <br />
+          <label for="dateInput">Latest Date (End Date):</label>
           <input type="date" id="dateInput" name="latestDate" class="input date-input" />
         </div>
 
@@ -39,8 +38,7 @@
         <div class="select-wrapper">
           <label for="playerSelect">Select Player:</label>
           <select id="playerSelect" name="playerSelect" class="custom-select">
-            <option value="">-- Select Player --</option>
-            <!-- Populate from DB -->
+            <option value="" disabled selected>-- Select Player --</option>
           </select>
         </div>
 
@@ -48,24 +46,19 @@
         <div class="select-wrapper">
           <label for="testCountSelect">Number of Recent Tests:</label>
           <select id="testCountSelect" name="recentTests" class="input">
-            <script>
-              for (let i = 1; i <= 20; i++) {
-                document.write(`<option value="${i}">${i}</option>`);
-              }
-            </script>
+            <!-- Populated by JS -->
           </select>
         </div>
 
-        <!-- Drag & Drop Test Selection -->
+        <!-- 4. Drag & Drop Test Selection -->
         <div class="drag-drop-container" id="dragDropContainer">
           <div class="tests-list available-tests" id="availableTests">
-              <h3>Available Tests</h3>
-              <!-- JS will insert test cards here -->
+            <h3>Available Tests</h3>
+            <!-- JS will insert test cards here -->
           </div>
-
           <div class="tests-list selected-tests" id="selectedTests">
-              <h3>Selected Tests</h3>
-              <!-- Dropped items will appear here -->
+            <h3>Selected Tests</h3>
+            <!-- Dropped items will appear here -->
           </div>
         </div>
 
@@ -75,15 +68,15 @@
         </div>
       </div>
 
-      <!-- Chart Area -->
-      <div class="chart-area">
-        <div class="chart-header">
-          <h3 style="color:white; text-align:center; font-style:italic;">
-            Individual Report - <span id="playerNameTitle"></span>
-          </h3>
+      <!-- Player Info Section (Always Visible) -->
+      <div class="player-info-section">
+        <h3 class="player-info-title">
+          Individual Report - <span id="playerNameTitle">N/A</span>
+        </h3>
+        <div class="player-info-card">
+          <div class="player-photo"></div>
           <table class="player-info-table">
             <tr>
-              <td rowspan="5" class="player-photo"></td>
               <th>Name</th>
               <td id="playerName"></td>
             </tr>
@@ -104,7 +97,14 @@
               <td id="playerRole"></td>
             </tr>
           </table>
+          <div class="coach-name">
+            <p><strong>Coach Name:</strong> <span id="coachName"></span></p>
+          </div>
         </div>
+      </div>
+
+      <!-- Chart Area (Fetched after form submission) -->
+      <div class="chart-area" id="chartArea">
         <div class="chart-container">
           <div class="chart-content">
             <canvas id="chartCanvas1"></canvas>
@@ -121,7 +121,6 @@
         </div>
       </div>
     </form>
-    </div>
   </main>
 
   <script src="script.js"></script>
